[package]
name = "mget"
version = "0.1.0"
authors = ["Zaid <startswithzed@gmail.com>"]
edition = "2021"

[dependencies]
clap = "2"
rand = "0.7"
url = "2"

[dependencies.smoltcp]
version = "0.6"
features = ["proto-igmp", "proto-ipv4", "verbose", "log"]

[dependencies.trust-dns]
version = "0.16"
default-features = false